<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F294E"
    tools:context=".ui.fragments.LanguageDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblName"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="25sp"  />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgLanguage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/lblName"
            app:riv_corner_radius="10dp"
            tools:layout_editor_absoluteX="20dp"
            tools:src="@mipmap/ic_launcher" />

        <GridLayout
            android:id="@+id/grdData"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/imgLanguage"
            android:columnCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDeveloper"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/datail_developer"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/lblDeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_columnWeight="12" />

            <TextView
                android:id="@+id/tvReleased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/datail_released"
                android:layout_columnWeight="1"/>
            <TextView
                android:id="@+id/lblReleased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_columnWeight="12" />

            <TextView
                android:id="@+id/tvCompiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/datail_compiler"
                android:layout_columnWeight="1"/>
            <TextView
                android:id="@+id/lblCompiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_columnWeight="12" />

            <TextView
                android:id="@+id/tvCrossPlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/datail_cross_platform" android:layout_columnWeight="1"/>
            <TextView
                android:id="@+id/lblCrossPlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_columnWeight="12" />

            <TextView
                android:id="@+id/tvOOP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/datail_oop" android:layout_columnWeight="1"/>
            <TextView
                android:id="@+id/lblOOP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:paddingTop="5dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_columnWeight="12" />
        </GridLayout>
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@+id/grdData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvAttributes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/datail_attibutes" />

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/lblAttributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </ScrollView>
            </LinearLayout>

            <!-- NOTA: Se agrega el progressBar personalizado utilizando el loading_anim que creamos -->
            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/cube"
                android:indeterminateDuration="1500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>